# market-ts-ml

./: .gitignore  README.md  pyproject.toml
services/: main_service.py
services/load_service/: load_service.py
services/message_service/: telegram_message_service.py
services/model_service/: model_service.py
services/utils/: plots.py
services/utils/loaders/: stocks.py
services/utils/models/: catboost.py
services/utils/preprocessing/: common.py
utils/: plots.py
utils/loaders/: BaseLoader.py  BinanceLoader.py  BybitLoader.py  crypto.py
utils/models/: RNNModel.py
utils/preprocessing/: common.py  market.py
